// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertType should detect incorrect types 1`] = `
"
file:1:1: Not a valid type
1
^"
`;

exports[`convertType should detect incorrect types 2`] = `
"
file:1:1: Not a valid type
\\"hello\\"
^"
`;

exports[`convertType should detect incorrect types 3`] = `
"
file:1:2: Unknown type constructor
(fn)
-^"
`;

exports[`convertType should detect incorrect types 4`] = `
"
file:1:2: Unknown type constructor
(fn a)
-^"
`;

exports[`convertType should detect incorrect types 5`] = `
"
file:1:1: Expected symbol as operator
(1 2 3)
^"
`;

exports[`convertType should detect incorrect types 6`] = `
"
file:1:1: Expected symbol as operator
(\\"hello\\" \\"world\\")
^"
`;

exports[`convertType should read extensible record 1`] = `
Object {
  "args": Array [
    Object {
      "extends": Object {
        "extends": Object {
          "name": "a",
          "type": "type-variable",
          "userSpecified": false,
        },
        "label": "y",
        "labelType": Object {
          "type": "number",
        },
        "type": "row-extension",
      },
      "label": "x",
      "labelType": Object {
        "type": "number",
      },
      "type": "row-extension",
    },
  ],
  "op": "record",
  "type": "application",
}
`;
